# iRPC

./: .copilot-instructions.md  .cursorrules  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/: copilot-instructions.md
examples/: arm_system.rs  calibration_example.rs  embedded_joint.rs  stm32g4_firmware.rs
src/: arm.rs  bus.rs  config.rs  joint.rs  lib.rs  protocol.rs
src/transport/: canfd.rs  mod.rs
tests/: arm_api_tests.rs  integration_tests.rs  protocol_tests.rs
