[package]
name = "irpc"
version = "0.1.0"
edition = "2021"
description = "Robotic node interaction protocol"
license = "GPL-3.0"

[dependencies]

[dev-dependencies]

[features]
default = []
std = []

# For no_std embedded targets
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"